feat: stable WynoGenesis release with relative paths and fixed imports